# KnockoffOrigins

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
KnockOffOrigins/: knockoff_construct.py
knockoff_original/: data_gen.py  decompose.py  gram_matrix.py  knockoff_construct.py  lasso.py
knockofforigins/: data_gen.py  gram_matrix.py  knockoff_construct.py
notebooks/: knockoff_construction.ipynb
tests/: helpers.py  test_data_gen.py  test_decompose.py  test_feature_selection.py  test_gram_matrix.py  test_knockoff_construct.py  test_lasso.py
